# soundcloud-tui

./: .cz.yaml  .pre-commit-config.yaml  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: pr-checks.yml
application/auth-server/: Cargo.toml  README.md
application/auth-server/src/: main.rs
application/ffplay/: Cargo.toml  README.md
application/ffplay/src/: cli.rs  cli_test.rs  main.rs
application/soundcloud-tui/: Cargo.toml  README.md
application/soundcloud-tui/src/: main.rs
src/: app.rs  main.rs
src/api/: mod.rs
src/api/soundcloud/: me.rs  mod.rs
src/app/: app.rs  layout.rs  mod.rs  render.rs  route.rs
src/components/: layout.rs  mod.rs  style.rs  widgets.rs
src/components/style/: border.rs  box_style.rs  layout.rs  mod.rs  text.rs
src/components/views/: mod.rs
src/components/widgets/: button.rs
src/domain/: app.rs  context.rs  mod.rs  router.rs
src/domain/pages/: login.rs  splash.rs
src/event/: event_server.rs  events.rs  input_reader.rs  key.rs  mod.rs  tests.rs  utils.rs
src/event/crossterm/: event_server.rs  event_source.rs  mod.rs  utils.rs
src/event/crossterm/tests/: event_server.rs  mod.rs
src/event/tests/: event_server.rs  mod.rs  utils.rs
src/player/: hls.rs  mod.rs
src/player/tests/: hls_test.rs  mod.rs
src/tests/utils/: fixture.rs
src/utils/: mod.rs  threads.rs
src/views/: route.rs
