[package]
name = "soundcloud-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.22"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
tokio = {  version = "1.14.0", features = ["full"] }
anyhow = "1.0.42"
futures-core = "0.3.28"
futures = "0.3.28"

[[bin]]
bench = false
path = "src/main.rs"
name = "soundcloud-tui"

[dev-dependencies]
async-trait = "0.1.72"
mockall = "0.11.4"
tokio-test = "0.4.2"
