[package]
name = "ffplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = "4.5.4"
player = { version = "0.1.0", path = "../../library/player" }
tokio = { version = "1.37.0", features = ["full"] }
