[package]
name = "soundcloud-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
render = { version = "0.1.0", path = "../../library/render" }
tokio = { version = "1.37.0", features = ["full"] }
